fix: a:active background-color

--- a/starter/03-CSS-Fundamentals/style.css
+++ b/starter/03-CSS-Fundamentals/style.css
@@ -120,10 +120,9 @@ footer p {
   }
 
   a:active {
-    background-color: black;
+    background-color: greenyellow;
     font-style: italic;
   }
 
   /* LVHA */
 
-  
