change a:active background-colour to black

--- a/starter/03-CSS-Fundamentals/style.css
+++ b/starter/03-CSS-Fundamentals/style.css
@@ -120,7 +120,7 @@ footer p {
   }
 
   a:active {
-    background-color: greenyellow;
+    background-color: black;
     font-style: italic;
   }
 
